--- a/css/styles.css
+++ b/css/styles.css
@@ -134,21 +134,31 @@ body {
 
 /* названия */
 
-.section .title {
+.title {
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
 }
 
+/* портфолио */
+
+.project-title {
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+.project-name {
+  font-size: 16px;
+  line-height: 1.88;
+}
+
 /* преимущества */
 
 .benefits-title {
-  font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  color: var(--title-text-color);
 }
 .description {
   font-size: 14px;
