--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ body {
 
 .logo {
   color: var(--logo-text-color);
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
