--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,7 @@ body {
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   background-color: var(--white-color);
+  font-size: 14px;
 }
 
 .button.button-secondary {
@@ -129,7 +130,7 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--white-color);
 }
 
 /* названия */
@@ -147,24 +148,23 @@ body {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  color: var(--title-text-color);
 }
 .project-name {
   font-size: 16px;
   line-height: 1.88;
+  color: var(--primary-text-color);
 }
 
 /* преимущества */
 
 .benefits-title {
-  font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
 }
 .description {
-  font-size: 14px;
   line-height: 1.71;
 }
-
 /* сотрудники */
 
 .section-team {
